🎉 EMERGENCY FIX: TTS Authentication Implementation
✅ Integrate UnifiedAuthService with 2-logic authentication flow
✅ Fix 0 elements issue through proper authentication handling
✅ Add comprehensive screenshot debugging for headless processes
✅ Verify success with TTS-REF (91 elements extracted, no duplicates)
✅ Remove hardcoded authentication logic

Technical Changes:
- Modified AuthenticationAnalyzerService to use UnifiedAuthService
- Implemented exact 2-logic flow: URL check → Auth if needed → Scrape
- Added screenshot debugging throughout authentication process
- Updated .gitignore to exclude test files and screenshots
- Organized development tools in /tools directory

Success Metrics:
- TTS-REF: 91 elements extracted, 0 duplicates
- Authentication: Using proven UnifiedAuthService patterns
- Debugging: Complete visibility through screenshots
- Code Quality: Eliminated hardcoded authentication logic

--- a/.gitignore
+++ b/.gitignore
@@ -149,3 +149,24 @@ frontend/dist/
 
 # Turborepo
 .turbo
+
+# Development and testing artifacts
+# Test files (temporary)
+test-*.js
+*-test-*.js
+test-integrated-auth-flow.js
+test-tts-auth.js
+
+# Screenshots and debugging artifacts
+screenshots/
+*-screenshots/
+tts-auth-test-screenshots/
+# Individual screenshot files in backend
+backend/tts-*.png
+backend/*.png
+
+# Development logs (if keeping local only)
+# claude.log.md (uncomment to exclude from commits)
+
+# MCP configuration (if contains sensitive data)
+# mcp.config.json (uncomment if needed)
