--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
   "license": "ISC",
   "dependencies": {
     "@modelcontextprotocol/server-brave-search": "^0.6.2",
-    "@modelcontextprotocol/server-everything": "^2025.5.12",
-    "@modelcontextprotocol/server-filesystem": "^2025.3.28",
+    "@modelcontextprotocol/server-everything": "^2025.7.1",
+    "@modelcontextprotocol/server-filesystem": "^2025.7.1",
     "@modelcontextprotocol/server-github": "^2025.4.8",
     "@modelcontextprotocol/server-memory": "^2025.4.25",
     "@modelcontextprotocol/server-postgres": "^0.6.2",
-    "@modelcontextprotocol/server-puppeteer": "^2025.5.12"
+    "@playwright/mcp": "^0.0.30"
   }
 }
