--- a/mcp.config.json
+++ b/mcp.config.json
@@ -27,7 +27,7 @@
       "command": "npx",
       "args": ["-y", "@notionhq/notion-mcp-server"],
       "env": {
-        "NOTION_TOKEN": "${NOTION_TOKEN}"
+        "NOTION_TOKEN": ""
       }
     },
     "brave-search": {
